[gd_scene load_steps=132 format=3 uid="uid://cqu4gwa1yim1b"]

[ext_resource type="Script" uid="uid://b4687dvauloml" path="res://reactor.gd" id="1_24gvb"]
[ext_resource type="Texture2D" uid="uid://cpf1h3rvs17re" path="res://Assets/Environment/fusion-reactor-hr-animation-1.png" id="2_bqmja"]
[ext_resource type="Texture2D" uid="uid://f3swv512q86m" path="res://Assets/Environment/fusion-reactor-hr-emission-3.png" id="3_cqbry"]
[ext_resource type="PackedScene" uid="uid://bvhx82eau62u8" path="res://Components/health_system.tscn" id="4_m4xxt"]
[ext_resource type="PackedScene" uid="uid://ceabu7h8g45hl" path="res://Components/health_bar.tscn" id="5_kqxqd"]
[ext_resource type="PackedScene" uid="uid://bwpofjjuvx0ws" path="res://Components/repairable.tscn" id="6_ah1g4"]
[ext_resource type="PackedScene" uid="uid://drw1bqon7jqdd" path="res://Components/decay_contributor.tscn" id="7_ardwp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qsp4k"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq58d"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_seu75"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhm"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq2sk"]
atlas = ExtResource("2_bqmja")
region = Rect2(1600, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k2k6"]
atlas = ExtResource("2_bqmja")
region = Rect2(2000, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rl1p"]
atlas = ExtResource("2_bqmja")
region = Rect2(2400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok6jj"]
atlas = ExtResource("2_bqmja")
region = Rect2(2800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_facbu"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1qrp"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_come4"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8e4i"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lmeg"]
atlas = ExtResource("2_bqmja")
region = Rect2(1600, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cp0l"]
atlas = ExtResource("2_bqmja")
region = Rect2(2000, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2t1y"]
atlas = ExtResource("2_bqmja")
region = Rect2(2400, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_gngh3"]
atlas = ExtResource("2_bqmja")
region = Rect2(2800, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n3wm"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnost"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnkbs"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6a44"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cbny"]
atlas = ExtResource("2_bqmja")
region = Rect2(1600, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrvbo"]
atlas = ExtResource("2_bqmja")
region = Rect2(2000, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_uypp3"]
atlas = ExtResource("2_bqmja")
region = Rect2(2400, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_blkrb"]
atlas = ExtResource("2_bqmja")
region = Rect2(2800, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_abqjc"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iyjs"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w656"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_e71vb"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnkwl"]
atlas = ExtResource("2_bqmja")
region = Rect2(1600, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_vke2r"]
atlas = ExtResource("2_bqmja")
region = Rect2(2000, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_uit24"]
atlas = ExtResource("2_bqmja")
region = Rect2(2400, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruth0"]
atlas = ExtResource("2_bqmja")
region = Rect2(2800, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm4vd"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjyto"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm6fg"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_b17eg"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntx8l"]
atlas = ExtResource("2_bqmja")
region = Rect2(1600, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_uatky"]
atlas = ExtResource("2_bqmja")
region = Rect2(2000, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqtf5"]
atlas = ExtResource("2_bqmja")
region = Rect2(2400, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vm84"]
atlas = ExtResource("2_bqmja")
region = Rect2(2800, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu3dr"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyx1q"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dhbp"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx0wj"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkkcx"]
atlas = ExtResource("2_bqmja")
region = Rect2(1600, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_34ol3"]
atlas = ExtResource("2_bqmja")
region = Rect2(2000, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2n8d"]
atlas = ExtResource("2_bqmja")
region = Rect2(2400, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy5fy"]
atlas = ExtResource("2_bqmja")
region = Rect2(2800, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx4rg"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dllo"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_phcyf"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_birbe"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1p13"]
atlas = ExtResource("2_bqmja")
region = Rect2(1600, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4obbf"]
atlas = ExtResource("2_bqmja")
region = Rect2(2000, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovcoh"]
atlas = ExtResource("2_bqmja")
region = Rect2(2400, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppx11"]
atlas = ExtResource("2_bqmja")
region = Rect2(2800, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yv1y"]
atlas = ExtResource("2_bqmja")
region = Rect2(0, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yh34"]
atlas = ExtResource("2_bqmja")
region = Rect2(400, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjuso"]
atlas = ExtResource("2_bqmja")
region = Rect2(800, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_23xmf"]
atlas = ExtResource("2_bqmja")
region = Rect2(1200, 2800, 400, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_swlj1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seu75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rl1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_facbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1qrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_come4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8e4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lmeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cp0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2t1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gngh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n3wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnost")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnkbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6a44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cbny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrvbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uypp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blkrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iyjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e71vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnkwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vke2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uit24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruth0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm4vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjyto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm6fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b17eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntx8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uatky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqtf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vm84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu3dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyx1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dhbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx0wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkkcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ol3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2n8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy5fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx4rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dllo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phcyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_birbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1p13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4obbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovcoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppx11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yv1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yh34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjuso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23xmf")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_swlj1"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_yysqy"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5t1e"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6isl"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_53bls"]
atlas = ExtResource("3_cqbry")
region = Rect2(1600, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwnsi"]
atlas = ExtResource("3_cqbry")
region = Rect2(2000, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lik"]
atlas = ExtResource("3_cqbry")
region = Rect2(2400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbvwl"]
atlas = ExtResource("3_cqbry")
region = Rect2(2800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn1fb"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvsr8"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_vieuh"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjja3"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0gw7"]
atlas = ExtResource("3_cqbry")
region = Rect2(1600, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_inymm"]
atlas = ExtResource("3_cqbry")
region = Rect2(2000, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcxqu"]
atlas = ExtResource("3_cqbry")
region = Rect2(2400, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0arob"]
atlas = ExtResource("3_cqbry")
region = Rect2(2800, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_dij0e"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1udn"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_wat4s"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywjan"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_m74q3"]
atlas = ExtResource("3_cqbry")
region = Rect2(1600, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_tko6h"]
atlas = ExtResource("3_cqbry")
region = Rect2(2000, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_am8a1"]
atlas = ExtResource("3_cqbry")
region = Rect2(2400, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dc3g"]
atlas = ExtResource("3_cqbry")
region = Rect2(2800, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_htgcl"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_smeu8"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3y11"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpm2s"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_u81y6"]
atlas = ExtResource("3_cqbry")
region = Rect2(1600, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt5wr"]
atlas = ExtResource("3_cqbry")
region = Rect2(2000, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnw77"]
atlas = ExtResource("3_cqbry")
region = Rect2(2400, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjgyh"]
atlas = ExtResource("3_cqbry")
region = Rect2(2800, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5iia"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_asu84"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwt6e"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_off2o"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_tttfs"]
atlas = ExtResource("3_cqbry")
region = Rect2(1600, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iygd"]
atlas = ExtResource("3_cqbry")
region = Rect2(2000, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5xqc"]
atlas = ExtResource("3_cqbry")
region = Rect2(2400, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4o1y"]
atlas = ExtResource("3_cqbry")
region = Rect2(2800, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mmqq"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3exxq"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aa3q"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmvma"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_shlp4"]
atlas = ExtResource("3_cqbry")
region = Rect2(1600, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n44k"]
atlas = ExtResource("3_cqbry")
region = Rect2(2000, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_86lig"]
atlas = ExtResource("3_cqbry")
region = Rect2(2400, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldnlw"]
atlas = ExtResource("3_cqbry")
region = Rect2(2800, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe8ju"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnk2o"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_oosfy"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf4f2"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkvoa"]
atlas = ExtResource("3_cqbry")
region = Rect2(1600, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5kpo"]
atlas = ExtResource("3_cqbry")
region = Rect2(2000, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw0td"]
atlas = ExtResource("3_cqbry")
region = Rect2(2400, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_37eu1"]
atlas = ExtResource("3_cqbry")
region = Rect2(2800, 2400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wkqm"]
atlas = ExtResource("3_cqbry")
region = Rect2(0, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve5sr"]
atlas = ExtResource("3_cqbry")
region = Rect2(400, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s44m"]
atlas = ExtResource("3_cqbry")
region = Rect2(800, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibca3"]
atlas = ExtResource("3_cqbry")
region = Rect2(1200, 2800, 400, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_1slqb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swlj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yysqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5t1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6isl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53bls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwnsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbvwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn1fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvsr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vieuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjja3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0gw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inymm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcxqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0arob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dij0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1udn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wat4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywjan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m74q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tko6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am8a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dc3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htgcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smeu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3y11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpm2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u81y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt5wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnw77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjgyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5iia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asu84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwt6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_off2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tttfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iygd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5xqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4o1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mmqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3exxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aa3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmvma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shlp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n44k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86lig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldnlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe8ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnk2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oosfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf4f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkvoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5kpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw0td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37eu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wkqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve5sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s44m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibca3")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok6jj"]
size = Vector2(110, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htxhm"]
size = Vector2(110, 116)

[node name="Reactor" type="StaticBody2D" groups=["Breakable"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_24gvb")

[node name="ReactorAnimation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.275, 0.275)
sprite_frames = SubResource("SpriteFrames_swlj1")

[node name="EmissionAnimation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.275, 0.275)
sprite_frames = SubResource("SpriteFrames_1slqb")

[node name="HealthSystem" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("4_m4xxt")]
maxHealth = 2500
sprite = NodePath("../ReactorAnimation")

[node name="HealthBar" parent="." node_paths=PackedStringArray("healthSystem") instance=ExtResource("5_kqxqd")]
offset_left = -30.0
offset_top = -69.0
offset_right = 34.0
offset_bottom = -63.0
healthSystem = NodePath("../HealthSystem")

[node name="Repairable" parent="." node_paths=PackedStringArray("repairableObject") instance=ExtResource("6_ah1g4")]
repairableObject = NodePath("..")
friendlyName = "Reactor?"
timeToRepair = 5.0
repairAmount = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Repairable"]
shape = SubResource("RectangleShape2D_ok6jj")

[node name="DecayContributor" parent="." node_paths=PackedStringArray("healthSystem", "sprite") instance=ExtResource("7_ardwp")]
healthSystem = NodePath("../HealthSystem")
sprite = NodePath("../ReactorAnimation")
decayDelay = 3.0
decayInterval = 3.0
decayAmount = 25
decayOnDamaged = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_htxhm")
